--- a/client/src/CSS/scss_partials/home/account/_accountModal.scss
+++ b/client/src/CSS/scss_partials/home/account/_accountModal.scss
@@ -50,7 +50,7 @@
 		margin-left: 2px;
 		margin-right: 2px;
 		font-size: 16px;
-		color: red;
+		color: v.$account-modal-capital-delete-text-color;
 	}
 
 	.form__char-counter {
