--- a/client/src/CSS/scss_partials/home/menu/_hamburger.scss
+++ b/client/src/CSS/scss_partials/home/menu/_hamburger.scss
@@ -134,7 +134,7 @@
 		&:hover,
 		:active {
 			opacity: 1;
-			color: v.$red-bright-level-1;
+			color: v.$breadcrumb-hamburger-close-button-text-color;
 		}
 	}
 
