--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/list/_listViewCreateItemSidebar.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/list/_listViewCreateItemSidebar.scss
@@ -3,7 +3,7 @@
 
 .create-item-component {
 	.blurred-background {
-		// Must be more than listViewSearchFilterSortBar.scss
+		// Must be more than listViewTopBar.scss
 		z-index: 1;
 		position: absolute;
 		top: v.$navbar-height;
@@ -14,7 +14,7 @@
 	}
 
 	.create-item-sidebar {
-		// Must be more than listViewSearchFilterSortBar.scss
+		// Must be more than listViewTopBar.scss
 		z-index: 1;
 		position: fixed;
 		top: v.$navbar-height;
