--- a/client/src/CSS/styles.css
+++ b/client/src/CSS/styles.css
@@ -902,7 +902,7 @@ dropdown can overlap all other components
   margin-left: 2px;
   margin-right: 2px;
   font-size: 16px;
-  color: red;
+  color: #ff0000;
 }
 .edit-account-modal-component .form__char-counter {
   float: right;
@@ -1007,34 +1007,69 @@ dropdown can overlap all other components
 }
 
 .delete-modal-component .blurred-background {
-  z-index: 1;
+  z-index: 2;
   position: fixed;
-  top: 56px;
+  top: 0px;
   left: 0px;
   background-color: black;
   opacity: 0.8;
   height: 100vh;
   width: 100vw;
 }
-.delete-modal-component .delete-account-modal {
-  z-index: 1;
+.delete-modal-component .blurred-background--click-to-close {
+  opacity: 0.6;
+}
+.delete-modal-component .delete-modal {
+  z-index: 2;
   position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  border: 5px solid black;
+  border-radius: 15px;
   background-color: white;
-  height: 170px;
-  width: 300px;
+  height: 195px;
+  width: 450px;
   text-align: center;
   font-family: Arial, Helvetica, sans-serif;
 }
-.delete-modal-component .warning-container {
-  margin-top: 45px;
+.delete-modal-component .delete-modal--comment-height {
+  height: 165px;
+}
+.delete-modal-component .warning-trapazoid-background {
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%);
+  top: 0px;
+  border-top: 26px solid #FF4E4E;
+  border-left: 45px solid transparent;
+  border-right: 45px solid transparent;
+  height: 0;
+  width: 140px;
+}
+.delete-modal-component .warning-header {
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%);
+  top: 2px;
+  margin: 0px;
+  padding: 0px;
+  color: white;
+  font-size: 18px;
+}
+.delete-modal-component .centered-message-container {
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%);
+  top: 48px;
+  width: 90%;
+}
+.delete-modal-component .centered-container__relative-container {
+  position: relative;
   width: 100%;
 }
-.delete-modal-component .warning-container__message {
-  font-size: 22px;
+.delete-modal-component .centered-message-container__relative-container__text {
+  font-size: 16px;
+  line-height: 28px;
 }
 .delete-modal-component .backend-errors {
   display: block;
@@ -1046,40 +1081,44 @@ dropdown can overlap all other components
   position: absolute;
   left: 50%;
   transform: translate(-50%);
-  top: 110px;
-  width: 265px;
+  bottom: 18px;
+  width: 200px;
 }
-.delete-modal-component .centered-buttons-container__delete {
+.delete-modal-component .centered-buttons-container__button {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  position: relative;
   float: left;
-  border: 1px solid black;
+  border: 1px solid #FF4E4E;
   border-radius: 10px;
-  background-color: #d36464;
-  padding: 10px 0px 10px 0px;
-  width: 127px;
+  background-color: #FF4E4E;
+  padding: 7px 0px 7px 0px;
+  height: 30px;
+  width: 90px;
   color: white;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 16px;
   cursor: pointer;
 }
-.delete-modal-component .centered-buttons-container__delete:hover,
-.delete-modal-component .centered-buttons-container__delete :active {
-  background-color: #cc4c4c;
+.delete-modal-component .centered-buttons-container__button:hover,
+.delete-modal-component .centered-buttons-container__button :active {
+  background-color: #ff0000;
 }
-.delete-modal-component .centered-buttons-container__cancel {
+.delete-modal-component .centered-buttons-container__button--cancel {
   float: right;
-  border: 1px solid black;
-  border-radius: 10px;
-  background-color: #ebebeb;
-  padding: 10px 0px 10px 0px;
-  width: 125px;
-  color: black;
-  text-align: center;
-  font-size: 16px;
-  cursor: pointer;
+  background-color: white;
+  color: #FF4E4E;
 }
-.delete-modal-component .centered-buttons-container__cancel:hover,
-.delete-modal-component .centered-buttons-container__cancel :active {
-  background-color: #e1e1e1;
+.delete-modal-component .centered-buttons-container__button--cancel:hover,
+.delete-modal-component .centered-buttons-container__button--cancel :active {
+  background-color: #fbfbfb;
+}
+.delete-modal-component .centered-buttons-container__button__text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .item-view-component .item-content-container,
